fix card size on ios + adjust stats tab

--- a/src/global.scss
+++ b/src/global.scss
@@ -37,3 +37,9 @@
 ion-item {
   cursor: pointer;
 }
+
+.ios {
+  ion-card-title {
+    font-size: 20px;
+  }
+}
